# seija-scalajs

./: .gitignore  LICENSE  README.md
deno_core/: lib.rs  runtime.rs
seija/: .gitignore  build.sbt  buildbin.bat  buildbin.sh  run.bat  run.sh
seija-deno/: Cargo.toml  a.xml  index.js  md.js
seija-deno/src/: main.rs
seija-deno/src/core/: event.rs  game.rs  mod.rs
seija-deno/src/opts/: app.rs  component2d.rs  core.rs  fs.rs  libs.rs  mod.rs
seija-deno/src/tests/res/: image.xml
seija-deno/src/tests/res/tmpl/: button.xml  checkBox.xml  image.xml  label.xml  panel.xml  sprite.xml
seija-deno/src/tests/res/ui/: CheckBox.xml  ListView.xml  idea.md  test.xml
seija-deno/src/tests/res/ui/core/: Image.xml
seija/.bsp/: sbt.json
seija/res/: ChromeOS.json
seija/res/UI/: MainWindow.xml  Menu.xml  NewPanel.xml
seija/res/UI/c/: NewImage.xml  Panel2.xml
seija/res/UI/chrome/: Panel.xml
seija/res/UI/core/: Button.xml  ContextMenu.xml  Frame.xml  GridCell.xml  Image.xml  Input.xml  Label.xml  MainPanel.xml  Menu.xml  Sprite.xml  StackLayout.xml  btn.clj
seija/res/UI/sled/: SelectBox.xml  SelectFile.xml
seija/src/Resource/UI/: CheckBox.xml  GridLayout.xml  Layout.xml  MyList.xml  TestPanel.xml
seija/src/Resource/UI/core/: Grid.xml  Image.xml  Label.xml  Sprite.xml  StackLayout.xml
seija/src/main/scala/: Main.scala
seija/src/main/scala/assets/: Asset.scala  Loader.scala
seija/src/main/scala/core/: App.scala  Component.scala  Entity.scala  EntityInfo.scala  EventSystem.scala  Foreign.scala  Template.scala  Time.scala  Transform.scala  World.scala
(+130 files in other folders)
