[package]
name = "seija-deno"
version = "0.1.0"
authors = ["yangdao <=>"]
edition = "2018"



[dependencies]
deno_core = {path = "../deno_core"}
seija = {path = "../../seija"}
serde_json = "1.0.58"
clap = "2.33.3"
byteorder = "1.3.4"
quick-xml = "0.20.0"
once_cell = "1.4.1"
home = "0.5.3"
path-absolutize = "3.0.6"